homepage now reflex correct component

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@
 
   .menuButton {
     width: 100%;
-    background: #549bea;
+    background: #ea547a;
     border: 1px solid #549bea;
     height: 3rem;
   }
