--- a/src/styles/findCessionsById.css
+++ b/src/styles/findCessionsById.css
@@ -5,7 +5,7 @@
   text-align: center;
   /* align-items: center; */
 }
-button{
+.button-styling{
   width: 10rem;
   margin-top:0.5rem;
   background-color:lightgreen;
